# bion

./: .gitignore  Cargo.toml  NOTICE  README.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md  changelog.json
.github/workflows/: release.yml  releases.yml  test.yml
LICENSES/LIGHTHOUSE/: LICENSE-APACHE
LICENSES/RETH/: LICENSE-APACHE  LICENSE-MIT
crates/account-utils/: Cargo.toml
crates/account-utils/src/: error.rs  helpers.rs  lib.rs  mnemonic.rs  operator_definitions.rs
crates/bion/: Cargo.toml
crates/bion/src/: lib.rs  utils.rs
crates/bion/src/cast/: mod.rs  tx.rs  utils.rs
crates/bion/src/cast/cmd/: mod.rs  rpc.rs  send.rs
crates/bion/src/cmd/: add_alias.rs  alias_config.rs  alias_utils.rs  consts.rs  get_network.rs  get_vault.rs  list_aliases.rs  list_networks.rs  list_vaults.rs  mod.rs  remove_alias.rs  utils.rs
crates/bion/src/cmd/bls/: create.rs  delete.rs  export.rs  list.rs  mod.rs
crates/bion/src/cmd/hyve/: list_operators.rs  mod.rs  onboard_operator.rs  pause_operator.rs  register_operator.rs  unpause_operator.rs  unregister_operator.rs
crates/bion/src/cmd/hyve/bls/: create.rs  delete.rs  list.rs
crates/bion/src/cmd/network/: add.rs  config.rs  consts.rs  list_vaults.rs  mod.rs  onboard.rs  opt_in.rs  opt_in_vault.rs  opt_out.rs  opt_out_vault.rs  pause_key.rs  register.rs  register_key.rs  remove.rs  remove_key.rs  set_max_network_limit.rs  set_middleware.rs  set_resolver.rs  stats.rs  status.rs  unpause_key.rs  utils.rs  vault_parameters.rs
crates/bion/src/cmd/operator/: add.rs  config.rs  consts.rs  delete.rs  get.rs  import.rs  list.rs  mod.rs  opt_in_network.rs  opt_in_vault.rs  opt_out_network.rs  opt_out_vault.rs  register.rs  remove.rs  status.rs  utils.rs  vault_parameters.rs
crates/bion/src/cmd/operator/bls/: create.rs  export.rs  list.rs
crates/bion/src/cmd/symbiotic/: get_vault.rs  is_operator.rs  list_vaults.rs  mod.rs  network_opt_in.rs  network_opt_in_status.rs  network_opt_out.rs  register_operator.rs  vault_opt_in.rs  vault_opt_in_status.rs  vault_opt_out.rs
crates/bion/src/cmd/symbiotic/network/: mod.rs  opt_in.rs  opt_in_status.rs  opt_out.rs
crates/bion/src/cmd/symbiotic/operator/: mod.rs  register.rs  register_status.rs
crates/bion/src/cmd/symbiotic/vault/: get.rs  mod.rs  opt_in.rs  opt_in_status.rs  opt_out.rs
crates/bion/src/cmd/vault/: add.rs  add_vault_admin.rs  config.rs  consts.rs  create.rs  create_burner_router.rs  get.rs  list.rs  mod.rs  network_parameters.rs  remove_vault_admin.rs  set_delegator.rs  set_deposit_limit.rs  set_deposit_whitelist.rs  set_depositor_whitelist_status.rs  set_is_deposit_limit.rs  set_network_limit.rs  set_operator_network_limit.rs  set_operator_network_shares.rs  set_slasher.rs  utils.rs
crates/bion/src/common/: consts.rs  mod.rs
crates/bion/src/hyve/: calls.rs  consts.rs  mod.rs  operator_utils.rs  utils.rs
crates/bion/src/hyve/contracts/: hyve_reader.rs  mod.rs
crates/bion/src/symbiotic/: calls.rs  consts.rs  mod.rs  network_utils.rs  operator_utils.rs  utils.rs  vault_utils.rs
crates/bion/src/symbiotic/contracts/: delegator_factory.rs  erc20.rs  hyve_network_middleware.rs  mod.rs  network_middleware.rs  network_middleware_service.rs  network_registry.rs  operator_registry.rs  opt_in_service.rs  slasher_factory.rs  vault.rs  vault_configurator.rs  vault_factory.rs
crates/bion/src/symbiotic/contracts/delegator/: base_delegator.rs  full_restake_delegator.rs  mod.rs  network_restake_delegator.rs  operator_network_specific_delegator.rs  operator_specific_delegator.rs
crates/bion/src/symbiotic/contracts/slasher/: base_slasher.rs  mod.rs  slasher.rs  veto_slasher.rs
crates/bion/src/tests/: mod.rs
crates/cli-runner/: Cargo.toml
crates/cli-runner/src/: lib.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: lib.rs
crates/multicall/: Cargo.toml
crates/multicall/src/: addresses.rs  contract.rs  error.rs  lib.rs  middleware.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: aliases.rs  consts.rs  fs.rs  lib.rs  padding.rs
crates/primitives/src/core/: attestation.rs  attestation_data.rs  ens.rs  epoch.rs  mod.rs  signature.rs  slot.rs  util.rs
crates/primitives/src/core/transaction/: blob.rs  mod.rs  pooled.rs  signed.rs  traits.rs  v0.rs
crates/primitives/src/dirs/: mod.rs
crates/primitives/src/kzg/: coefficient.rs  kzg_commitment.rs  kzg_proof.rs  mod.rs
crates/primitives/src/p2p/: errors.rs  mod.rs  network.rs  rpc_methods.rs
crates/primitives/src/protocol/: mod.rs
crates/primitives/src/slot_clock/: manual_slot_clock.rs  mod.rs  system_time_slot_clock.rs  ticker.rs
crates/primitives/src/utils/: mod.rs
crates/safe_multisig/: Cargo.toml
crates/safe_multisig/src/: calls.rs  consts.rs  lib.rs  transaction_data.rs  utils.rs
crates/safe_multisig/src/contracts/: safe.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
docker/metrics/: README.md  prometheus.yml
spec/networking/: discovery.md  p2p.md
