[workspace]
members = [
	"crates/lockfile",
	"crates/version",
	"crates/account-utils",
	"crates/cli-runner",
	"crates/bion",
	"crates/multicall", 
	"crates/safe_multisig",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["The Hyve core developers"]
readme = "README.md"
homepage = "https://thehyve.xyz"
repository = "https://github.com/thehye-ai/hyve-da"
license = "MIT OR Apache-2.0"
rust-version = "1.83"

[workspace.dependencies]

# Ethereum
alloy = { version = "0.9.2", features = [
	"full",
	"provider-anvil-node",
	"provider-anvil-api",
	"rpc-types-anvil",
]}
alloy-chains = "0.1.57"
alloy-consensus = { version = "0.9.2", features = ["serde", "kzg"] }
alloy-contract = "0.9.2"
alloy-dyn-abi = "0.8.16"
alloy-eips = "0.9.2"
alloy-json-abi = "0.8.19"
alloy-json-rpc = "0.9.2"
alloy-network = "0.9.2"
alloy-primitives = "0.8.16"
alloy-provider = "0.9.2"
alloy-rlp = "0.3.8"
alloy-rpc-types = "0.9.2"
alloy-serde = "0.9.2"
alloy-signer = "0.9.2"
alloy-signer-local = "0.9.2"
alloy-sol-types = "0.8.16"
alloy-transport = "0.9.2"
ethereum-types = "0.14"

# Error Handling
thiserror = "1.0.57"

# Filesystem
dirs = "5.0.1"

# Logging
tracing = "0.1.0"
eyre = "0.6"

# misc
clap = "4.5.20"
colored = "2.0"
ctor = "0.4.1"
dialoguer = "0.11.0"
hex = "0.4.3"
humantime = "2.1.0"
lazy_static = "1.4.0"
num-format = "0.4.4"
prettytable = { git = "https://github.com/thehyve-ai/prettytable-rs.git", branch = "master", package = "prettytable-rs" }
regex = "1"
rpassword = "5.0.0"
semver = "1.0.25"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Network
openssl-sys = { version = "0.10.68", features = ["vendored"] }
reqwest = { version = "0.12", default-features = false }
tokio = "1.29.1"

# Parsing
serde = "1.0.204"
serde_json = "1.0.121"
serde_yaml = "0.9.32"

# Primitives
chrono = "0.4.38"
itertools = "0.10.5"
rand = "0.8.5"

# Reth
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", package = "reth-tasks" }

# Local Dependencies
account-utils = { path = "crates/account-utils" }
foundry-wallets = { path = "crates/foundry-wallets" }
bion = { path = "crates/bion" }
hyve-cli-runner = { path = "crates/cli-runner" }
hyve-version = { path = "crates/version" }
lockfile = { path = "crates/lockfile" }
multicall = { path = "crates/multicall" }
safe_multisig = { path = "crates/safe_multisig" }

# Lighthouse
eth2_keystore = { git = "https://github.com/thehyve-ai/lighthouse.git", branch = "stable", package = "eth2_keystore" }
eth2_wallet = { git = "https://github.com/thehyve-ai/lighthouse.git", branch = "stable", package = "eth2_wallet" }
lighthouse-bls = { git = "https://github.com/thehyve-ai/lighthouse.git", branch = "stable", package = "bls" }

# Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
