[package]
name = "bion"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bion"
path = "bin/main.rs"

[dependencies]
multicall.workspace = true

# hyve
account-utils.workspace = true
hyve-cli-runner.workspace = true
hyve-version.workspace = true

# ethereum
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips = { workspace = true, features = ["serde"] }
alloy-json-abi.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
#alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true
alloy-signer = { workspace = true, features = ["eip712"] }
alloy-signer-local = { workspace = true, features = ["mnemonic", "keystore"] }
alloy-sol-types.workspace = true
alloy-transport.workspace = true
ethereum-types.workspace = true

# Lighthouse
eth2_keystore.workspace = true
eth2_wallet.workspace = true
lighthouse-bls.workspace = true

safe_multisig.workspace = true
cast = { git = "https://github.com/thehyve-ai/foundry.git", branch = "master", package = "cast" }
foundry-cli = { git = "https://github.com/thehyve-ai/foundry.git", branch = "master", package = "foundry-cli" }
foundry-common = { git = "https://github.com/thehyve-ai/foundry.git", branch = "master", package = "foundry-common" }
foundry-config = { git = "https://github.com/thehyve-ai/foundry.git", branch = "master", package = "foundry-config" }
foundry-wallets = { git = "https://github.com/thehyve-ai/foundry.git", branch = "master", package = "foundry-wallets" }

# misc
chrono.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
colored.workspace = true
dirs.workspace = true
dialoguer.workspace = true
eyre.workspace = true
hex.workspace = true
humantime.workspace = true
itertools.workspace = true
num-format.workspace = true
prettytable.workspace = true
rand.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
