[package]
name = "hyve-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
mock = []

[dependencies]

# alloy
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-contract.workspace = true
alloy-eips = { workspace = true, features = ["serde"] }
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = [
    "serde",
    "rlp",
    "arbitrary",
] }
alloy-provider.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-sol-types.workspace = true
alloy-transport.workspace = true


# ethereum
ethereum_hashing.workspace = true
ethereum-types = { workspace = true, features = ["arbitrary"] }
ethereum_ssz = { workspace = true, features = ["arbitrary"] }
ethereum_ssz_derive = { workspace = true }
ssz_types = { workspace = true, features = ["arbitrary"] }

# misc
anyhow.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
async-trait.workspace = true
bincode.workspace = true
derive_more.workspace = true
dirs.workspace = true
hex.workspace = true
lighthouse-bls.workspace = true
mockall.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde_derive.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["macros"] }
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }
tree_hash_derive.workspace = true
tracing.workspace = true

# crypto
secp256k1 = { workspace = true, features = [
    "global-context",
    "recovery",
    "rand",
] }
tree_hash = { workspace = true, features = ["arbitrary"] }
kzg = { workspace = true }
kzg_traits = { workspace = true }


[dependencies.libp2p]
version = "0.54.1"


[target.'cfg(windows)'.dependencies]
winapi = "~0.3.5"
windows-acl = "~0.3.0"
